--- a/style.css
+++ b/style.css
@@ -41,3 +41,18 @@ header nav a {
 header nav a:hover {
   color: #fff;
 }
+
+main {
+  position: relative;
+  max-width: 730px;
+  margin: 7rem auto 4rem;
+  padding: 0 1rem;
+}
+
+h1 {
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  color: #e4f1ff;
+  margin-bottom: 1.5rem;
+  letter-spacing: 1px;
+}
