--- a/style.css
+++ b/style.css
@@ -92,3 +92,25 @@ strong {
   text-align: right;
   font-style: italic;
 }
+
+footer {
+  margin-top: 3rem;
+  padding: 1.5rem 0;
+  text-align: center;
+  border-top: 1px solid #143043;
+  color: #8fb3d6;
+  font-size: 1rem;
+}
+
+footer a {
+  color: #5dcafc;
+}
+
+footer a:hover {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+footer a:active {
+  color: #c21048
+}
