Removed Invalid CSS + Added Hero Class

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 }
 
 html, body {
-  html, body {
   background: #071421;
   font-family: "Trebuchet MS", sans-serif;
   font-size: 16px;
@@ -47,6 +46,12 @@ main {
   max-width: 730px;
   margin: 7rem auto 4rem;
   padding: 0 1rem;
+}
+
+.hero {
+  max-width: 100%;
+  height: auto;
+  border-radius: 2px;
 }
 
 h1 {
